 * Disposed of an XML which is tested but not used.
 * Removed get_internal_value_id - no longer used
 * removed get_internal_value from metafield

2006-11-27 moj
 * RequestRemoval/RemoveWithEmail/RejectWithEmail now use a phrase for
    'click to edit'.
 * AbstractSearch uses phrase for bad subscreen
 * Upload's Hide/Show options are now phrases. 

2006-11-27 moj
 * Added phrases for unphrased admin actions

2006-11-28 moj
 * Added phrases for import plugins (not for those in constructor,
    as no session is available at that point). 
 * Renamed $name to $a_name/$e_name in BibTeX, as this was giving
    warnings.

2006-11-28 moj
 * Missed phrase in XML, tidied up file a bit.
 * General testing with flawed XML import file. 

2006-11-29 tdb
 * Fix XML::LibXML::Text->toString returning undef on empty string
 * Added support for File::BOM and dos-format files to Endnote
    import
 * Fix my fix for XML::LibXML::Text (ought to be toString, not
    ->data!)

2006-11-29 moj
 * Added citations for succeeds/commentary.
 * Added phrase to put HTML wrapper around mail.
 * Email.pm uses HTML wrapper phrase.

2006-11-29 moj
 * Temporary fix to avoid errors with messages (puts <div> around
    strings). Probably a better way to do this.

2006-11-30 moj
 * Added cursor:pointer to dropdown (better than the text cursor)

2006-11-30 moj
 * Altered password field help (no longer logged out when you change
    password).

2006-11-30 moj
 * Created render_no_results as an opt to the Paginate module. This
    is rendered in place of the results if none are returned. 
 * Added a render_no_results to render a tr with the correct colspan
    in Paginate::Columns

2006-12-01 tdb
 * Added experimental mapping from OpenURL resolver to OAI-PMH
 * Added BOM and CRLF detection to bin/import
 * Removed BOM and CRLF detection from EndNote
 * Removed user=0 dropping of the user argument
 * Added a confirmation to bin/import if user argument isn't set
 * Added an OAI script to export access logs

