@@ -1,4 +1,3 @@
-#!/usr/bin/perl -w -I/opt/eprints3/perl_lib
 ######################################################################
 #
 # EPrints::Script
